# PR-Optic

./: .env.example  .gitignore  README.md  dashboard.py  dashboard_enhanced.py  pyproject.toml
src/: config.py  exceptions.py  main.py
src/api/routes/: github.py  health.py  reviews.py  webhook.py
src/middleware/: error_handler.py  webhook_auth.py
src/models/: dashboard.py  github.py  review.py  state.py
src/prompts/: senior_review.py
src/services/: ai_provider.py  ai_service_factory.py  claude_service.py  fix_verifier_service.py  github_service.py  mcp_storage_service.py  review_orchestrator.py  review_service.py  sqlite_state_service.py  state_service.py  webhook_security.py
src/services/providers/: claude_provider.py  gemini_provider.py  github_models_provider.py
src/utils/: comment_formatter.py  diff_parser.py  file_filter.py  logger.py  step_logger.py
tests/: test_claude_service.py  test_config.py  test_dashboard.py  test_error_handling.py  test_fix_verifier_service.py  test_github_service.py  test_prompts.py  test_review_orchestrator.py  test_sqlite_state_service.py  test_webhook.py  test_webhook_allowlist.py  test_webhook_routing.py  test_webhook_security.py
