[project]
name = "pr-optic"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "anthropic>=0.40.0",
  "google-generativeai>=0.8.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-mock>=3.12.0",
  "pytest-cov>=4.1.0",
  "streamlit>=1.30.0",
]

[tool.uv]
package = false

[tool.uv.sources]

